# emdevif

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
connectivity/: CMakeLists.txt  Can.cppm  Connect.cppm  Serial.cppm  Spi.cppm
container/: CMakeLists.txt  Map.cppm
container/implements/Map/: StaticMap.cppm
core/: .gitignore  CMakeLists.txt  README.md  concepts.cppm  endian.cppm  lock_guard.cppm
core/cmake/: config_compile_options.cmake  config_optimize.cmake
core/data_container/: ArrayMap.cppm  Map.cppm  MessageQueue.cppm  MessageSlot.cppm  RingBuffer.cppm
core/data_container/implements/ArrayMap/: ArrayMap.cppm  BasicArrayMap.cppm  StaticMap.cppm
core/data_container/implements/Map/: ArrayMap.cppm
core/depends/boost_pfr/: CMakeLists.txt
core/error_handler/: ErrorMessage.cppm  error_code.cppm  error_handler.cpp  error_handler.cppm  fatal_handler.cppm  fatal_handler_extern_c.cpp
core/inc/emdevif/: attributes_and_useful_macros.h  byte_type.h  concepts.hpp  fatal_handler.h  fatal_handler.hpp  fault_handler.hpp  integer_suffix.hpp  line_separator.h  simplify_decl_macros.hpp  type_traits.hpp
core/inc/rmdev/: attributes_and_useful_macros.h  byte_type.h  concepts.hpp  fault_handler.hpp  simplify_decl_macros.hpp
core/modules/: concepts.cppm  endian.cppm  error_handler.cppm  integer_suffix.cppm  lock_guard.cppm  resource_guard.cppm  type_traits.cppm  utils.cppm
core/modules/data_container/: array_map.cppm  fixed_string.cppm  inplace_dynamic_array.cppm  inplace_map.cppm  message_queue.cppm  message_slot.cppm  ring_buffer.cppm  static_map.cppm
core/modules/resource_guard/: defer.cppm  init_guard.cppm  lock_guard.cppm  try_finally.cppm
core/modules/utils/: BitInt.cppm  InitOnce.cppm  when.cppm
core/src/error_handler/: error_handler.cpp  fatal_handler_extern_c.cpp
core/type_traits/: type_traits.cppm
core/type_traits/impl/: misc.cppm  tuple_style.cppm
device_handle_map/: CMakeLists.txt
logger/: CMakeLists.txt  Logger.cppm  Logger_.cppm  README.md  emdevif_logger_config_example.hpp  logger.cppm
logger/async/: CMakeLists.txt  async.cpp
logger/inc/emdevif/: logger.hpp
logger/src/: async.hpp  logger.cpp  sync.hpp
logger/sync/: CMakeLists.txt  sync.cpp
peripheral/: AGENTS.md  CMakeLists.txt  README.md
peripheral/model/: CMakeLists.txt  CanModel.cppm  GpioModel.cppm  PwmModel.cppm  SerialModel.cppm  SpiModel.cppm  TimerModel.cppm
peripheral/model/modules/: can_model.cppm  gpio_model.cppm  pwm_model.cppm  serial_model.cppm  spi_model.cppm  timer_model.cppm
peripheral/peripheral/: CMakeLists.txt  Can.cppm  Gpio.cppm  Pwm.cppm  Serial.cppm  Spi.cppm  Timer.cppm  peripheral_base_module.cppm
peripheral/peripheral_handle_map/: CMakeLists.txt  PeripheralHandleMap.cppm
peripheral/peripheral_impl/: CMakeLists.txt  Can.cppm  Gpio.cppm  Pwm.cppm  Serial.cppm  Spi.cppm  Timer.cppm  peripheral_base_module.cppm
peripheral/peripheral_impl_/: CMakeLists.txt  Can.cppm  Gpio.cppm  Pwm.cppm  Serial.cppm  Spi.cppm  Timer.cppm
peripheral_handle_map/: CMakeLists.txt  PeripheralHandleMap.cppm
peripheral_models/: CMakeLists.txt  Can.cppm  Gpio.cppm  Pwm.cppm  Serial.cppm  Spi.cppm  peripheral_models_error_handler.cppm
peripheral_models/emdevif_peripheral_model_traits/: CMakeLists.txt  gpio_traits.cppm
peripherals/peripherals/: CMakeLists.txt  Can.cppm  Gpio.cppm  Spi.cppm  Timer.cppm
support/esp-idf/: CMakeLists.txt
support/stm32cubemx/: CMakeLists.txt  stm32cubemx_processor.py
system/: CMakeLists.txt  README.md  atomic.cppm  event_group.cppm  heap_memory.cppm  message_queue.cppm  mutex.cppm  semaphore.cppm  sys_message_slot.cppm  sys_queue.cppm  thread.cppm
system/Implements/FreeRTOS/: event_group.cpp  event_group_definitions.cppm  event_group_implements.cppm  heap_memory_implements.cppm  msg_queue_implements.cppm  mutex.cpp  mutex_implements.cppm  semaphore.cpp  semaphore_implements.cppm  sys_queue_implements.cppm  thread.cpp  thread_implements.cppm
system/Interface/: event_group_interface.cppm  heap_memory_interface.cppm  msg_queue_interface.cppm  mutex_interface.cppm  semaphore_interface.cppm  sys_queue_interface.cppm  thread_interface.cppm
test/: .gitignore  CMakeLists.txt  README.md  emdevif_test_list.hpp  testForceToIgnore.cmake  test_main.cpp  test_main.hpp
test/heap_usage_checker/: CMakeLists.txt  heap_usage_checker.hpp
test/heap_usage_checker/ESP-IDF/: esp_idf_heap_checker.cpp
test/heap_usage_checker/FreeRTOS/: FreeRTOS_heap_checker.cpp
test/heap_usage_logger/: CMakeLists.txt  heap_usage_logger.hpp
test/heap_usage_logger/FreeRTOS/: FreeRTOS_heap_logger.cpp
test/test_suits/: ArrayTraitsAggregateTest.cpp  InitOnce_test.cpp  endian_test.cpp  resource_guard_test.cpp  type_traits_test.cpp
test/test_suits/container/: ArrayMap_test.cpp  RingBuffer_test.cpp  StaticMap_test.cpp
test/test_suits/language_feature_test/: c_feature_test.c
test/test_suits/logger/: Logger_test.cpp
test/test_suits/system/: heap_test.cpp  sys_message_slot_test.cpp  sys_queue_test.cpp  thread_mutex_test.cpp
test/test_suits/thread/: thread_mutex_test.cpp  thread_test.cpp
test/test_suits/util/: BitInt_test.cpp  InitOnce_test.cpp  RingBuffer_test.cpp  When_test.cpp
thread/: CMakeLists.txt  atomic.cppm  message_queue.cppm  mutex.cppm  thread.cppm  thread_constant.cppm
thread/Implements/FreeRTOS/: CMakeLists.txt  mutex_implements.cppm  thread_implements.cppm
thread/Interface/: msg_queue_interface.cppm  mutex_interface.cppm  thread_constant_interface.cppm  thread_interface.cppm
thread/system/: CMakeLists.txt
thread/system/Interface/: msg_queue_interface.cppm  thread_constant_interface.cppm
timeline/: CMakeLists.txt  README.md  Timeline.cppm  timeline.cppm
timeline/inc/emdevif/: timeline.hpp
util/: ArrayTraitsAggregate.cppm  BitInt.cppm  CMakeLists.txt  InitOnce.cppm  README.md  RingBuffer.cppm
util/Implements/BitInt/: bit_int_base.cppm  signed_bit_int.cppm  unsigned_bit_int.cppm
util/internal_headers/: BitInt_exception_config.hpp
util/modules/: BitInt.cppm  InitOnce.cppm
(+123 files in other folders)
